# SOLARNET-python-client

./: .gitignore  LICENSE  MANIFEST  README.md  setup.cfg  setup.py
SOLARNET/: Data.py  Dataset.py  Datasets.py  __init__.py  api.py  filters.py  time.py
