[metadata]
name = SOLARNET
version = attr: SOLARNET.__version__
license = MIT
license_file = LICENSE
description = A python 3 client to access the RESTfull API of the SOLARNET Virtual Observatory
long_description = file: README.md
long_description_content_type = text/markdown
author = Benjamin Mampaey
author_email = bmampaey@gmail.com
url = https://github.com/bmampaey/SOLARNET-python-client
download_url = https://github.com/bmampaey/SOLARNET-python-client/tarball/2.2
platform = any
keywords =
	sun
	astronomy
	SOLARNET
	RESTful

classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages =
	SOLARNET

python_requires = >= 3.4

setup_requires =
	setuptools >= 38.3.0

install_requires =
	python-dateutil
	slumber
	astropy

include_package_data = True

[bdist_wheel]
universal = True
